# User/Routes/auth.unprotected.routes.js
@@ -1,7 +1,7 @@
 import express from 'express';
 import { validate } from 'express-validation';
 
-import { login, register, resendVerificationMail, verifyCustomer } from '../Controllers/auth.controller.js';
+import { login, register, resendVerificationMail, resetPassword, verifyCustomer } from '../Controllers/auth.controller.js';
 import { emailBodyValidation, loginValidation, registerValidation, tokenParamsValidation } from '../Validations/auth.js';
 const Router = express.Router();
 
@@ -9,9 +9,9 @@ Router.post('/register', validate(registerValidation), register);
 Router.post('/login', validate(loginValidation), login);
 Router.get('/verify/:token', validate(tokenParamsValidation), verifyCustomer);
 Router.post('/re-verify', validate(emailBodyValidation), resendVerificationMail);
+Router.post('/reset-password/send-mail', validate(emailBodyValidation), resendVerificationMail);
+Router.post('/reset-password/:token', validate(tokenParamsValidation), resetPassword);
 /*
- * Router.post('/reset-password/send-mail', validate(emailBodyValidation), sendResetPasswordMail);
- * Router.get('/reset-password/:token', validate(tokenParamsValidation), validate(passwordBodyValidation), resetPassword);
  * Router.get('/refresh-token/:token', refreshToken);
  */
 
